# interface-chat-python

./: .gitignore  README.md  pyproject.toml
src/claude_interface/: __init__.py  auth.py  client.py  logger.py  memory.py  session.py  types.py
tests/: test_auth.py  test_client.py  test_logger.py  test_memory.py  test_session.py
